# survey-summarizer

./: LICENSE  Makefile  README.md  app.py  pyproject.toml
app/: app.py  main.py
app/helpers/: cohere.py  csv.py  text.py  translate.py
app/pages/: __init__.py  clean_2.py  clean_3.py  cluster_4.py  cluster_5.py  conclusion_7.py  download_6.py  download_8.py  embed_3.py  embed_4.py  filter_1.py  filter_2.py  foreword_0.py  summarise_5.py  summarise_6.py  upload_0.py  upload_1.py
