[tool.poetry]
name = "survey-summarizer"
version = "0.1.0"
description = ""
authors = ["Shen Nan <wongshennan@gmail.com>"]
readme = "README.md"
packages = [{include = "survey_summarizer"}]

[tool.poetry.dependencies]
python = "^3.11"
cohere = "^4.0.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
streamlit = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
