[tool.poetry]
name = "survey-summarizer"
version = "0.1.0"
description = ""
authors = ["Shen Nan <wongshennan@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
cohere = "^4.0.4"
pandas = "^1.5.3"
googletrans = "^3.0.0"
numpy = "^1.24.2"
huggingface = "^0.0.1"
streamlit = { version="^1.20.0", python=">=3.9,<3.9.7 || >3.9.7,<4.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
